Fixed kafka topic mapping
Replaced kafka consumer/producer configuration from java config to spring boot config. Removed kafka's configuration classes

--- a/rental/run/src/main/resources/application.properties
+++ b/rental/run/src/main/resources/application.properties
@@ -7,10 +7,20 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-spring.kafka.listener.ack-mode=record
 kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVICES:localhost:9092}
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVICES:localhost:9092}
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.group-id=${PAYMENT_TOPIC_GROUP_ID:payment_topic_group}
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.listener.ack-mode=manual
+
 payment.request.topic=${PAYMENT_REQUEST_TOPIC_NAME:payment_request_topic}
 rental.payment.confirm.topic=${RENTAL_CONFIRM_PAYMENT_TOPIC_NAME:rental_payment_confirm}
+
 
 spring.liquibase.enabled=true
 spring.liquibase.change-log=liquibase/changelog-master.xml
