--- a/payment/run/src/main/resources/application.properties
+++ b/payment/run/src/main/resources/application.properties
@@ -6,8 +6,17 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 
 kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVICES:localhost:9092}
-spring.kafka.listener.ack-mode=record
-change.request.status.topic.name=${CHANGE_REQUEST_STATUS_TOPIC_NAME:change_request_status_topic}
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVICES:localhost:9092}
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.group-id=${PAYMENT_TOPIC_GROUP_ID:payment_topic_group}
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.listener.ack-mode=manual
+
+kafka.listener.payment.request.topic.name=payment_request_topic
 
 server.port=8084
 
