--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>common</module>
         <module>jwt-security-utils-starter</module>
         <module>payment</module>
+        <module>server-eureka</module>
+        <module>server-eureka/run</module>
     </modules>
 
     <properties>
