--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>server-eureka</artifactId>
+    <artifactId>api-gateway</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>run</module>
@@ -27,10 +27,28 @@
             <artifactId>spring-boot-starter</artifactId>
             <version>${spring-boot-starter-version}</version>
         </dependency>
-        <!-- SPRING CLOUD EUREKA SERVER -->
+        <!-- SPRING CLOUD GATEWAY -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+            <version>${spring-boot-starter-version}</version>
+        </dependency>
+        <!-- SPRING STARTER EUREKA CLIENT -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>${spring-boot-starter-version}</version>
+        </dependency>
+        <!-- SPRING BOOT ACTUATOR -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>${spring-boot-starter-version}</version>
+        </dependency>
+        <!-- SPRING BOOT WEBFLUX -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
             <version>${spring-boot-starter-version}</version>
         </dependency>
 
@@ -40,7 +58,6 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
-
     </dependencies>
 
     <dependencyManagement>
@@ -64,4 +81,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
