--- a/authorization/pom.xml
+++ b/authorization/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>spring-boot-starter</artifactId>
             <version>${spring-boot-starter-version}</version>
         </dependency>
+        <!-- SPRING STARTER EUREKA CLIENT -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>${spring-boot-starter-version}</version>
+        </dependency>
         <!-- SPRING AOP -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -64,6 +70,13 @@
             <artifactId>junit-jupiter</artifactId>
             <version>1.18.3</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- GSON -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
         </dependency>
 
         <!-- JUNIT -->
