--- a/authorization/run/src/main/resources/application.properties
+++ b/authorization/run/src/main/resources/application.properties
@@ -21,3 +21,8 @@ security.refresh.token.lifetime=${REFRESH_TOKEN_LIFETIME:2592000}
 
 microservice.name=${MICROSERVICE_NAME:AUTHORIZATION_MICROSERVICE}
 authorization.microservice.url=${AUTHORIZATION_MICROSERVICE_URL:http://localhost:8081}
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=${EUREKA_DEFAULT_ZONE:http://localhost:8761/eureka}
+eureka.instance.prefer-ip-address=true
