--- a/rental/run/src/main/resources/application.properties
+++ b/rental/run/src/main/resources/application.properties
@@ -40,7 +40,7 @@ profile.admin.requests.page.size=${PROFILE_ADMIN_REQUESTS_PAGE_SIZE:5}
 profile.admin.refunds.page.size=${PROFILE_ADMIN_REFUNDS_PAGE_SIZE:5}
 profile.user.refunds.page.size=${PROFILE_USER_REFUNDS_PAGE_SIZE:5}
 
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone=${EUREKA_DEFAULT_ZONE:http://localhost:8761/eureka}
 eureka.instance.prefer-ip-address=true
