Created base structure of email microservice

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>payment</module>
         <module>server-eureka</module>
         <module>api-gateway</module>
+        <module>email</module>
     </modules>
 
     <properties>
