--- a/authorization/service/pom.xml
+++ b/authorization/service/pom.xml
@@ -50,6 +50,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.senla.email</groupId>
+            <artifactId>dto</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.senla.authorization</groupId>
             <artifactId>dto</artifactId>
             <version>1.0-SNAPSHOT</version>
