Add email sending support
Some fixes, add security, some changing in properties

--- a/authorization/run/src/main/resources/application.properties
+++ b/authorization/run/src/main/resources/application.properties
@@ -13,8 +13,8 @@ logging.level.root=info
 
 server.port=8081
 
-rabbitmq.communication.email.request.queue.name=email_request_queue
-rabbitmq.communication.email.confirmation.queue.name=email_confirmation_queue
+rabbitmq.communication.email.request.queue.name=${RABBIT_REQUEST_QUEUE_NAME:email_request_queue}
+rabbitmq.communication.email.confirmation.queue.name=${RABBIT_CONFIRMATION_QUEUE_NAME:email_confirmation_queue}
 rabbitmq.communication.exchange.name=rabbitmq_topic_exchange
 rabbitmq.communication.routing_key=rabbitmq.routing
 
