--- a/common/pom.xml
+++ b/common/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>jackson-core</artifactId>
             <version>2.14.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.14.1</version>
+        </dependency>
         <!-- VALIDATION -->
         <dependency>
             <groupId>jakarta.validation</groupId>
