--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,18 @@ services:
       - zookeeper
     restart: always
 
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: rabbitmq
+    ports:
+      - 5672:5672
+      - 15672:15672
+    volumes:
+      - ~./docker/local/rabbitmq/data/:/var/lib/rabbitmq
+      - ~./docker/local/rabbitmq/log/:/var/log/rabbitmq
+    networks:
+      - rabbitmq_network
+
   authorization-microservice:
     container_name: authorization-microservice
     depends_on:
@@ -188,6 +200,10 @@ services:
       CAR_MICROSERVICE_URI: http://car-microservice:8082/car-run
       RENTAL_MICROSERVICE_URI: http://rental-microservice:8083
       EUREKA_DEFAULT_ZONE: http://eureka-server:8761
+
+networks:
+  rabbitmq_network:
+    driver: bridge
 
 volumes:
   data: {}
