Add password restoring

--- a/authorization/run/src/main/resources/application.properties
+++ b/authorization/run/src/main/resources/application.properties
@@ -15,6 +15,8 @@ server.port=8081
 
 rabbitmq.communication.email.request.queue.name=${RABBIT_REQUEST_QUEUE_NAME:email_request_queue}
 rabbitmq.communication.email.confirmation.queue.name=${RABBIT_CONFIRMATION_QUEUE_NAME:email_confirmation_queue}
+rabbitmq.communication.password.restore.request.queue.name=${RABBIT_PASSWORD_RESTORE_QUEUE_NAME:password_restore_request_queue}
+rabbitmq.communication.password.restore.confirmation.queue.name=${RABBIT_PASSWORD_RESTORE_CONFIRMATION_QUEUE_NAME:password_restore_confirmation_queue}
 rabbitmq.communication.exchange.name=rabbitmq_topic_exchange
 rabbitmq.communication.routing_key=rabbitmq.routing
 
@@ -27,6 +29,9 @@ security.refresh.token.lifetime=${REFRESH_TOKEN_LIFETIME:2592000}
 
 microservice.name=${MICROSERVICE_NAME:AUTHORIZATION_MICROSERVICE}
 authorization.microservice.url=${AUTHORIZATION_MICROSERVICE_URL:http://localhost:8081}
+
+service.password.restore.request.sent.message=${PASSWORD_RESTORE_REQUEST_SENT_MESSAGE:Request for changing password has been created. \
+  Please check your email to continue.}
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
