Add scheduling for password restoring mails

--- a/email/run/src/main/resources/application.properties
+++ b/email/run/src/main/resources/application.properties
@@ -43,6 +43,7 @@ spring.senla.jwt.utils.refresh-token-secret=zL1HB3Pch05Avfynovxrf/kpF9O2m4NCWKJU
 service.password.restore.success.message=${PASSWORD_RESTORE_SUCCESS_MESSAGE:Password has been changed successfully!}
 
 mailing.requests.page.size=10
+sent.password.restore.mails.count=20
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
